--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "json:server": "json-server --watch db.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Juan Ocasio",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express-graphql": "^0.6.3",
     "graphql": "^0.9.1",
     "json-server": "^0.9.6",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "nodemon": "^1.11.0"
   }
 }
